# ifc-ids-mcp

./: .coveragerc  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DESIGN_SPECIFICATION.md  README.md  constitution.md  cost_estimation_requirements.ids  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
samples/: wall_fire_rating.ids  walls-fire-rating.ifc
specs/001-project-setup/: plan.md
specs/002-session-management/: plan.md
specs/003-document-management/: plan.md
specs/004-specification-management/: plan.md
specs/005-basic-facets/: plan.md
specs/006-advanced-facets/: plan.md
specs/007-restrictions/: plan.md
specs/008-validation/: plan.md
specs/009-testing-framework/: plan.md
src/ids_mcp_server/: __init__.py  __main__.py  config.py  server.py  version.py
src/ids_mcp_server/session/: __init__.py  cleanup.py  manager.py  models.py  storage.py
src/ids_mcp_server/tools/: __init__.py  document.py  facets.py  ids_audit_tool.py  restrictions.py  specification.py  validation.py  validators.py
tests/: __init__.py  conftest.py
tests/component/: test_coverage_boosters.py  test_edge_cases.py  test_error_handling.py
tests/integration/: test_complete_workflows.py  test_restriction_workflows.py
tests/unit/: test_config.py  test_main.py  test_project_structure.py
tests/unit/session/: __init__.py  test_cleanup.py  test_manager.py  test_storage.py
tests/unit/tools/: test_document_tools.py  test_facet_tools.py  test_ids_audit_tool.py  test_restriction_tools.py  test_specification_tools.py  test_validation_tools.py  test_validators.py
tests/validation/: test_xsd_compliance.py
tests/validation/fixtures/invalid_ids_files/: missing_title.ids  no_applicability.ids
tests/validation/fixtures/valid_ids_files/: simple_wall_requirement.ids
